--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,48 @@ canvas {
   position: relative;
   max-width: 1120px;
 }
+.gradient-overlay {
+  position: relative;
+}
 
+.gradient-overlay::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
+  z-index: 1;
+}
+
+.gradient-overlay img {
+  position: relative;
+  z-index: 2;
+}
+
+.background-section {
+  position: relative;
+  background: url('../assets/images/background-first-section.jpg') no-repeat center center;
+  background-size: cover;
+  padding: 20px;
+}
+
+.background-section::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
+
+.background-section > * {
+  position: relative;
+  z-index: 2;
+}
 @layer utilities {
   .flex-center {
     @apply flex items-center justify-center
