Added new videos, text changes, almost finished landing page

--- a/src/index.css
+++ b/src/index.css
@@ -62,10 +62,23 @@ canvas {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.35);
   z-index: 1;
 }
+.neon-effect {
+  position: relative;
+  box-shadow: 0 0 20px #50C878, 0 0 40px #50C878, 0 0 60px #50C878, 0 0 80px #50C878;
+  animation: neon-pulse 1.5s infinite alternate;
+}
 
+@keyframes neon-pulse {
+  from {
+    box-shadow: 0 0 20px #50C878, 0 0 40px #50C878, 0 0 60px #50C878, 0 0 80px #50C878;
+  }
+  to {
+    box-shadow: 0 0 40px #50C878, 0 0 60px #50C878, 0 0 80px #50C878, 0 0 100px #50C878;
+  }
+}
 .background-section > * {
   position: relative;
   z-index: 2;
