--- a/src/index.css
+++ b/src/index.css
@@ -109,13 +109,15 @@ canvas {
   }
 
   .common-padding {
-    @apply sm:py-32 py-20 sm:px-10 px-5
+    @apply sm:py-20 py-20 sm:px-10 px-5
   }
 
   .section-heading {
     @apply text-gray lg:text-6xl md:text-5xl text-3xl lg:mb-0 mb-5 font-medium opacity-0 translate-y-20
   }
-
+  .section-subheading {
+    @apply text-gray lg:text-4xl md:text-xl text-lg font-normal opacity-0 translate-y-20
+  }
   .feature-text {
     @apply text-gray max-w-md text-lg md:text-xl font-semibold opacity-0 translate-y-[100px]
   }
